miniextendr-macros/tests/ui/r_macro_if_no_body.rs
//! Test: r! rejects `if (cond)` with no body.

use miniextendr_macros::r;

fn main() {
    let _ = r!(if (x));
}
